# lazy_guide

./: .gitignore  README.md  index.html  pyproject.rye  pyproject.toml
docs/: about.md
site/about/: index.html
src/lazy_guide/: __init__.py  type_awareness.py  typing_reveal_type.py
src/lazy_guide/mkdocs_test/site/: index.html
src/lazy_guide/mkdocs_test/site/search/: search_index.json
src/types/: character_number_dataclass.py  constants.py  design_by_contract.py  disallow_illegal_states.py  letter_number_dataclass.py  pizza_order.py  reveal_type.py  string_phone_number.py  stringly_phone_number.py  stringly_typed_phone_number.py  type_awareness.py  type_guard.py  type_reassignment.py  typed_dict.py  typed_phone_number.py  typing_reveal_type.py
