# For uv @ https://docs.astral.sh/uv/
[project]
name = "lazy-guide"
version = "0.1.0"
description = "Source Code for the Book"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "autopep8>=2.3.1",
    "pybooktools",
    "typeguard>=4.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazy_guide"]

[tool.uv.sources]
pybooktools = { path = "../pybooktools", editable = true }
